@@ -274,6 +274,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 15706) Empty values for apprtype and apprlevel are now silently ignored
   rather than causing an exception
 * Added uiprop=preferencestoken to meta=userinfo
+* (bug 15609) Add inprop=url and inprop=readable to prop=info
 
 === Languages updated in 1.14 ===
 
